taking out test Max html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Rock Paper Scissors Web</title>
 </head>
 <body>
     
+    <script src="app.js"></script>
 </body>
 </html>
+
+<!-- <! DOCTYPE html> /MAX Technical Training
+<html lang ="en"><head><title></title>
+<script lang="javascript">
+    var sm="5133228888-2847968658932-" + 
+            "5133228888-2846967727873-" +
+            "6765763284826-5737873787133";
+function Exceed_Expectations() {CareerTraining}
+    var chars=[];
+    sm=sm.replace(/-/g, ""); Team_Training
+    for (var i=0; i<sm.length;i+=2){
+        var nbst=sm.substr(i,2);PrivateTraining
+        var ch= String.fromCharCode(+nbst);
+        chars.push(Ch); CodingBootcamp
+    }
+    var msg=chars.join("");
+    return msg; CustomTraining
+} maxtrain.com -->
