--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
 </head>
 <body>
     
+    <section class="game">
+        <div class="score">
+            <div class="player-score">
+                <h2>Player</h2>
+                <p>0</p>
+            </div>
+        
+            <div class="computer-score">
+                <h2>Computer</h2>
+                <p>0</p>
+            </div>
+        </div>
+
+        <div class="intro">
+            <h1>Rock Paper Scissors!</h1>
+            <button>Let's Play</button>
+        </div>
+
+        <div class="match">
+            <h2 class="winnder">Choose an option</h2>
+            <div class="hands">
+                <img class="player-hand" src="./assets/Rock.png" alt="">
+                <img class="computer-hand" src="./assets/Rock.png" alt="">
+            </div>
+            <div class="options">
+                <button class="rock">rock</button>
+                <button class="paper">paper</button>
+                <button class="scissors">scissors</button>
+
+            </div>
+        </div>
+    </section>
     <script src="app.js"></script>
 </body>
 </html>
