--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="match">
-            <h2 class="winnder">Choose an option</h2>
+            <h2 class="winner">Choose an option</h2>
             <div class="hands">
                 <img class="player-hand" src="./assets/Rock.png" alt="">
                 <img class="computer-hand" src="./assets/Rock.png" alt="">
