--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <button>Let's Play</button>
         </div>
 
-        <div class="match">
+        <div class="match fadeOut"> 
             <h2 class="winner">Choose an option</h2>
             <div class="hands">
-                <img class="player-hand" src="./assets/Rock.png" alt="">
-                <img class="computer-hand" src="./assets/Rock.png" alt="">
+                <img class="player-hand" src="./assets/rock2.png" alt="">
+                <img class="computer-hand" src="./assets/rock2.png" alt="">
             </div>
             <div class="options">
                 <button class="rock">rock</button>
