corrected rock, paper, scissors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="intro">
-            <h1>Rock Paper Scissors!</h1>
+            <h1>Rock, Paper, Scissors!</h1>
             <button>Let's Play</button>
         </div>
 
