--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 
         <div class="intro">
             <h1>Rock, Paper, Scissors!</h1>
+           <br><p></p>
+           <br>
             <button>Let's Play</button>
         </div>
 
         <div class="match fadeOut"> 
             <h2 class="winner">Choose an option</h2>
             <div class="hands">
-                <img class="player-hand" src="./assets/rock2.png" alt="">
-                <img class="computer-hand" src="./assets/rock2.png" alt="">
+                <img class="player-hand" src="./assets/rock.png" alt="">
+                <img class="computer-hand" src="./assets/rock.png" alt="">
             </div>
             <div class="options">
                 <button class="rock">rock</button>
